--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <title>Big Trip</title>
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body class="page-body">
     <header class="page-header">
       <div class="page-body__container  page-header__container">
-        <img class="page-header__logo" src="img/logo.png" width="42" height="42" alt="Trip logo">
+        <img class="page-header__logo" src="./img/logo.png" width="42" height="42" alt="Trip logo">
 
         <div class="trip-main">
           <div class="trip-main__trip-controls  trip-controls">
@@ -33,6 +33,6 @@
       </div>
     </main>
 
-    <script src="../src/main.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
